<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Pool Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_add_person">Add New Person</string>
    <string name="title_activity_add_person">Add Person</string>
    <string name="hint_add_person">Enter name here</string>
    <string name="button_enter">Enter</string>
    <string name="button_view_person">View User Data</string>
    <string name="title_activity_view_person">View Person Details</string>
    <string name="title_activity_add_trip">Add Trip</string>
    <string name="button_add_trip">Add Trip</string>
    <string name="tv_driver">Driver:</string>
    <string name="tv_pass1">Passenger 1:</string>
    <string name="tv_pass2">Passenger 2:</string>
    <string name="tv_pass3">Passenger 3:</string>
    <string name="tv_pass4">Passenger 4:</string>
    <string name="button_set_cost">Set Cost Per Trip</string>
    <string name="button_show_all">Show Total User Fees</string>
    <string name="button_clear_all">Clear User Fees</string>
    <string name="button_exit">Exit</string>
    <string name="set_cost_prompt">Please enter tthe cost per one way trip</string>
    <string name="title_activity_set_cost">Set Trip Cost</string>
    <string name="title_activity_show_totals">Total User Fees</string>
    <string name="button_share_costs">Share Fees via Whatsapp</string>
    <string name="button_feedback">Send Feedback</string>
    <string name="title_activity_send_feedback">Send Feedback</string>
    <string name="feedback_prompt">Enter your feedback here.</string>

</resources>
